syntax = "proto3";

package rivet.backend.billing;

import "proto/common.proto";

message GameLobbyMetrics {
	rivet.common.Uuid game_id = 1;
	repeated RegionTierMetrics metrics = 2;
}

message RegionTierMetrics {
	rivet.common.Uuid namespace_id = 6;
	rivet.common.Uuid region_id = 1;
	string tier_name_id = 2;
	string lobby_group_name_id = 5;
	int64 uptime = 4; // in seconds
}

message Team {
	rivet.common.Uuid team_id = 1;
	optional string stripe_customer_id = 2;
	optional int64 payment_method_attached_ts = 3;
	optional int64 payment_method_valid_ts = 4;
	optional int64 payment_failed_ts = 5;
	optional int64 payment_succeeded_ts = 6;
}

message Game {
	rivet.common.Uuid game_id = 1;
	int64 create_ts = 2;
	optional string stripe_customer_id = 3;
}
